--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,8 +1,3 @@
-m4trace:aclocal.m4:964: -1- m4_include([config/libtool.m4])
-m4trace:aclocal.m4:965: -1- m4_include([config/ltoptions.m4])
-m4trace:aclocal.m4:966: -1- m4_include([config/ltsugar.m4])
-m4trace:aclocal.m4:967: -1- m4_include([config/ltversion.m4])
-m4trace:aclocal.m4:968: -1- m4_include([config/lt~obsolete.m4])
 m4trace:configure.ac:3: -1- AC_INIT([lib_mysqludf_xql], [1.0.0], [arnold@adaniels.nl])
 m4trace:configure.ac:3: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:3: -1- m4_pattern_forbid([_AC_])
@@ -153,12 +148,12 @@ m4trace:configure.ac:3: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:3: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:4: -1- AC_CONFIG_AUX_DIR([config])
 m4trace:configure.ac:6: -1- _m4_warn([obsolete], [The macro `AM_CONFIG_HEADER' is obsolete.
-You should run autoupdate.], [aclocal.m4:419: AM_CONFIG_HEADER is expanded from...
+You should run autoupdate.], [aclocal.m4:8385: AM_CONFIG_HEADER is expanded from...
 configure.ac:6: the top level])
 m4trace:configure.ac:6: -1- AC_CONFIG_HEADERS([config.h])
 m4trace:configure.ac:7: -1- AM_INIT_AUTOMAKE
 m4trace:configure.ac:7: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:7: -1- AM_AUTOMAKE_VERSION([1.11])
+m4trace:configure.ac:7: -1- AM_AUTOMAKE_VERSION([1.11.1])
 m4trace:configure.ac:7: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:7: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:7: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -349,7 +344,7 @@ m4trace:configure.ac:10: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_TRUE])
 m4trace:configure.ac:10: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
 m4trace:configure.ac:11: -1- AC_PROG_LIBTOOL
 m4trace:configure.ac:11: -1- _m4_warn([obsolete], [The macro `AC_PROG_LIBTOOL' is obsolete.
-You should run autoupdate.], [config/libtool.m4:102: AC_PROG_LIBTOOL is expanded from...
+You should run autoupdate.], [aclocal.m4:123: AC_PROG_LIBTOOL is expanded from...
 configure.ac:11: the top level])
 m4trace:configure.ac:11: -1- LT_INIT
 m4trace:configure.ac:11: -1- m4_pattern_forbid([^_?LT_[A-Z_]+$])
@@ -547,7 +542,7 @@ m4trace:configure.ac:12: -1- AC_SUBST_TRACE([LIBTOOL])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^LIBTOOL$])
 m4trace:configure.ac:14: -1- m4_include([config/ax_lib_mysql.m4])
 m4trace:configure.ac:15: -2- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is obsolete.
-You should run autoupdate.], [../../lib/autoconf/general.m4:230: AC_HELP_STRING is expanded from...
+You should run autoupdate.], [../../lib/autoconf/general.m4:209: AC_HELP_STRING is expanded from...
 config/ax_lib_mysql.m4:49: AX_LIB_MYSQL is expanded from...
 configure.ac:15: the top level])
 m4trace:configure.ac:15: -1- AC_SUBST([MYSQL_CONFIG])
